# HaruQuantAI

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  apply_pragmas.py  apply_pragmas_risk.py  coverage.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_final_tests.py  run_real_tests.py  run_scratch_tests.py  run_scratch_tests_deep.py
.github/workflows/: ci.yml
ARCHIVE-V1/agentic/: Agent_Catalog.md  __init__.py
ARCHIVE-V1/agentic/agents/: __init__.py
ARCHIVE-V1/agentic/config/: __init__.py  agent_model.py  correlation_clusters.yaml  live_trading.yaml  live_trading_config.json  live_trading_config.toml  mcp_metadata_schema.yaml  multi_strategy_config.json  multi_strategy_config_with_db_notifications.json  risk_enabled_multi_strategy.json  risk_policy_profiles.yaml  risk_thresholds.yaml
ARCHIVE-V1/agentic/runtime/: __init__.py  permissions.py  runner.py  safety.py  schemas.py
ARCHIVE-V1/agentic/workflows/: __init__.py
ARCHIVE-V1/api/: __init__.py  ai_chat.py  app.py  approvals.py  auth.py  auth_utils.py  dependencies.py  events.py  health.py  main.py  models.py  router.py  scheduler.py  websocket.py
ARCHIVE-V1/services/: __init__.py
ARCHIVE-V1/web/: .gitignore  package-lock.json  package.json  tsconfig.agentic-tests.json
ARCHIVE-V2/: __init__.py
ARCHIVE-V2/analytics/: errors.py  tool_api.py
ARCHIVE-V2/brokers/: binance.py  ctrader.py  dukascopy.py  mt5.py  yahoo.py
ARCHIVE-V2/data/: contracts.py  errors.py  models.py  normalization.py  public_api.py  scheduler.py  sources.py  storage.py  transforms.py  validation.py
ARCHIVE-V2/indicators/: README.md
ARCHIVE-V2/optimization/: errors.py  models.py  robustness.py  sweeps.py
ARCHIVE-V2/portfolio/: README.md
ARCHIVE-V2/research/: README.md  data.py  features.py  helpers.py  leakage.py  metrics.py  reporting.py
ARCHIVE-V2/risk/: README.md  __init__.py  contracts.py  validations.py
ARCHIVE-V2/simulator/: contracts.py  engine.py  errors.py
ARCHIVE-V2/strategy/: base.py  contracts.py
ARCHIVE-V2/trading/: contracts.py  errors.py
ARCHIVE-V2/usage/: 02_data.py  04_strategies.py  08_simulator.py
ARCHIVE-V2/utils/: __init__.py  settings.py  standard.py
app/: README.md  __init__.py  main.py  runtime.py
app/agentic/: __init__.py
app/utils/: README.md  __init__.py  auth.py  errors.py  event_bus.py  logger.py  logging.py  normalization.py  notifications.py  security.py  settings.py  validations.py
app/web/: package-lock.json  package.json
docs/: ARCHITECTURE.md  CHANGELOG.md  FUNCTIONALITY_REGISTRY.md  PROJECT.md  README-live.md  README-trader.md
docs/adr/: 0001-defer-ai-conversation-domain.md  0002-traderecord-schema-ownership.md  0003-mt5-access-split.md  0004-sim-route-simulation-boundary.md  0005-paper-route-ownership.md  0006-live-paper-runtime-orchestration.md  0007-cross-domain-contract-ownership.md  0008-persistence-infrastructure-and-schema-ownership.md  ADR-ANALYTICS-LIMITS.md  ADR-ANALYTICS-PUBLIC-SURFACE.md
docs/analytics/: catalogs.md  requirement-audit.md
docs/dev/: 04-strategy-brownfield-upgrade-plan-with-coverage-matrix.md  07-live-to-trading-migration-plan.md  07-trader-to-trading-migration-plan.md  08-simulator-brownfield-upgrade-plan.md  AGILE_ROADMAP.md  CHANGELOG-temp.md  Implementation_Plan_v1.md  MT5_Strategy_Tester.md  PHASE_10_IMPLEMENTATION_PLAN.md  PHASE_11_IMPLEMENTATION_PLAN.md  PHASE_12_IMPLEMENTATION_PLAN.md  PHASE_13_IMPLEMENTATION_PLAN.md  PHASE_1_IMPLEMENTATION_PLAN.md  PHASE_2_IMPLEMENTATION_PLAN.md  PHASE_3_IMPLEMENTATION_PLAN.md  PHASE_4_IMPLEMENTATION_PLAN.md  PHASE_5_IMPLEMENTATION_PLAN.md  PHASE_6_IMPLEMENTATION_PLAN.md  PHASE_7_IMPLEMENTATION_PLAN.md  PHASE_8_IMPLEMENTATION_PLAN.md  PHASE_9_IMPLEMENTATION_PLAN.md  TRACEABILITY_MATRIX.md  TRADING_BLOCKER_AMENDMENTS.md  TRADING_REVIEW_2026-07-19.md  brokers_completion_review.md  builder_prompt.md  features_register.md  functions_register.md
docs/plans/: Analytics_Module_Technical_Specification.md  Data_Module_Technical_Specification.md  Execution_Module_Technical_Specification.md  Implementation.md  MT5_Broker_Adapter_Implementation_Specification.md  Optimization_Evidence_Engine_Technical_Specification.md  Portfolio_Module_Technical_Specification.md  Risk_Module_Technical_Specification.md  Simulator_Technical_Specification.md  Utils_Module_Technical_Specification.md
docs/standards/: Agent_Auditing_Checklist.md  Agent_Standard.md  Agentic_AI_Playbook.md  Tool_Function_Auditing_Checklist.md  audit_prompt.md  code_quality.md  prompts.md  rewrite_prompt.md  rewrite_prompt_v2.md
docs/templates/: PROJECT.md  README.md  README_v2.md
scripts/: ci_check.py  release_check.py
tests/: __init__.py
tests/analytics/: _support.py
tests/brokers/: __init__.py  provider_settings.py  wf_support.py
tests/data/: __init__.py  helpers.py  helpers_models.py
tests/indicators/: helpers.py
tests/portfolio/: conftest.py
tests/risk/: __init__.py  _support.py
tests/services/: __init__.py
tests/simulator/: __init__.py
tests/strategy/: __init__.py
tests/system/: __init__.py
tests/trading/: conftest.py
tests/unit/: __init__.py  test_massive_others_extra.py  test_massive_pybots_extra.py  test_placeholder.py
tests/usage/: 01_utils.py  02_data.py  03_indicator.py  04_strategies.py  05_risk.py  06_analytics.py  07_trading.py  08_simulator.py  09_optimization.py  10_live.py  12_research.py  __init__.py
tools/: __init__.py
tools/data/: __init__.py  _common.py  csv.py  dukascopy.py  dukascopy_instruments.py  generators.py  labeling.py  mt5.py  parquet.py  scheduler.py  validators.py
tools/indicators/: README.md  __init__.py  momentum.py  standard.py  statistical.py  trend.py  validation.py  volatility.py  volume.py
tools/strategy/: README.md  __init__.py  base.py  contracts.py  registry.py  signal_tools.py  stateful_helpers.py  storage.py
tools/utils/: __init__.py  common.py  config.py  errors.py  ids.py  logger.py  normalization.py  result.py  security.py  standard.py  validators.py
(+3167 files in other folders)
