[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haruquantai"
version = "0.1.0"
description = "Domain-driven, agentic AI quantitative trading research and execution platform."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "HaruQuantAI" }
]
keywords = [
    "algorithmic-trading",
    "quantitative-finance",
    "backtesting",
    "risk-management",
    "agentic-ai",
    "fastapi",
    "trading"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "typing-extensions>=4.12.2",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "pyarrow>=16.1.0",
    "duckdb>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.32",
    "alembic>=1.13.2",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "orjson>=3.10.7",
    "rich>=13.7.1",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "flake8>=7.1.0",
    "flake8-bugbear>=24.8.19",
    "flake8-docstrings>=1.7.0",
    "flake8-pyproject>=1.2.3",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "coverage[toml]>=7.6.1",
    "types-python-jose>=3.3.4.20240106",
    "types-passlib>=1.7.7.20240819",
    "types-requests>=2.32.0.20240712",
]

api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
]

ui = []

[project.urls]
Homepage = "https://github.com/haruquantai/haruquantai"
Repository = "https://github.com/haruquantai/haruquantai"
Issues = "https://github.com/haruquantai/haruquantai/issues"

[tool.setuptools]
packages = ["api", "tools", "scripts"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = "\\.pyi?$"
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | venv
  | env
  | build
  | dist
  | data/logs
  | data/cache
  | ui/node_modules
  | ui/.next
)/
'''

[tool.isort]
profile = "black"
line_length = 88
py_version = 311
known_first_party = ["api", "tools", "scripts"]
skip = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
    "data/logs",
    "data/cache",
    "ui/node_modules",
    "ui/.next",
]

# Flake8 normally reads .flake8/setup.cfg/tox.ini.
# The flake8-pyproject plugin allows this section to be used from pyproject.toml.
[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # Compatible with Black slicing style.
    "W503",  # Compatible with Black line breaks before binary operators.
    "D100",  # Temporarily relaxed for incremental rebuild.
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
]
select = ["B", "C", "D", "E", "F", "W"]
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
    "data/logs",
    "data/cache",
    "ui/node_modules",
    "ui/.next",
]
per-file-ignores = [
    "tests/*:D",
    "tests/**:D",
    "scripts/*:D",
    "scripts/**:D",
    "__init__.py:F401",
]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
exclude = [
    "^data/",
    "^ui/",
    "^build/",
    "^dist/",
    "^\\.venv/",
    "^venv/",
    "^env/",
]

[[tool.mypy.overrides]]
module = [
    "MetaTrader5.*",
    "pandas.*",
    "numpy.*",
    "duckdb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=tools",
    "--cov=api",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests.",
    "integration: Integration tests.",
    "usage: Usage/example tests.",
    "e2e: End-to-end tests.",
    "slow: Slow tests.",
    "requires_mt5: Tests that require MetaTrader 5.",
    "requires_network: Tests that require network access.",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
branch = true
source = ["tools", "api", "scripts"]
omit = [
    "tests/*",
    "tests/**",
    "*/__init__.py",
    "data/*",
    "data/**",
    "ui/*",
    "ui/**",
    "scripts/examples/*",
    "scripts/examples/**",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"
